# recollect

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
experiments/hebbian_poc/: benchmark.py  config.py  engine.py  retrieval.py  scenarios.py  schema.sql
experiments/hebbian_poc/prompts/: relational.md  restrictive.md
experiments/iterative_spread_poc/: benchmark.py  config.py  engine.py  retrieval.py  scenarios.py  schema.sql
experiments/token_reseed_poc/: benchmark.py  config.py  engine.py  retrieval.py  scenarios.py  schema.sql
experiments/token_reseed_poc/prompts/: entity_chain.md  hybrid.md  ontological.md  production.md  situational.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_v3_cognitive_model.py  test_v3_full_flow.py  test_v3_ollama.py  test_v3_pydantic_ai.py
tests/unit/: test_promoted_facts_bypass.py  test_v3_buffer.py  test_v3_concept_attention.py  test_v3_core.py  test_v3_core_associations.py  test_v3_core_entity_match.py  test_v3_core_ops.py  test_v3_core_persona.py  test_v3_decay.py  test_v3_embeddings.py  test_v3_extraction.py  test_v3_fusion_score.py  test_v3_persona_model.py  test_v3_providers_pydantic_ai.py  test_v3_ranking.py  test_v3_recall_tokens.py  test_v3_reflect.py  test_v3_rrf.py  test_v3_server.py  test_v3_session_core.py  test_v3_session_summary.py  test_v3_storage.py  test_v3_storage_entities.py  test_v3_storage_schema.py  test_v3_strength.py  test_v3_types_entity.py  test_v3_utils.py  test_v3_worker.py
